--- a/README
+++ b/README
@@ -1,3 +1,5 @@
-Erforderliche Libraries:
+In diesem Solo-Projekt habe ich eine E-Paper Raumreservierung implementiert. Zur Steuerung des E-Papers gibt es noch eine App.
+
+Erforderliche Arduino Libraries:
 + GxEPD2
 + Adafruit_GFX_Library
