--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-In diesem Solo-Projekt habe ich eine E-Paper Raumreservierung implementiert. Zur Steuerung des E-Papers gibt es noch eine App.
+In diesem studentischen Solo-Projekt habe ich eine E-Paper Raumreservierung implementiert. Zur Steuerung des E-Papers gibt es noch eine App.
 
 Projektdauer: 2 Monate
 
